--- a/config.env
+++ b/config.env
@@ -1,14 +1,13 @@
 # Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
+BOT_TOKEN = "5986168289:AAGfK-48y5UA0JSCOESMMctC5PXIc2vO19w5440235697"
 GDRIVE_ID = ""
-OWNER_ID =
+OWNER_ID =5440235697
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+TELEGRAM_API =22745599
+TELEGRAM_HASH = "3f0b55d67e0357d426afc5dc3c27145c"
 # OPTIONAL CONFIG
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1
 IS_TEAM_DRIVE = ""
